0.02
 - Add SEE ALSO section in doc.
 - Add minimal version of Perl.
 - Add missing English dependency.

0.01 2015-03-04T00:48:41+01:00
 - First version.