@@ -2,6 +2,7 @@
  - Add SEE ALSO section in doc.
  - Add minimal version of Perl.
  - Add missing English dependency.
+ - Update Module::Install to 1.16 version.
 
 0.01 2015-03-04T00:48:41+01:00
  - First version.
